test/objects/Product__c.object
<CustomObject>
    <description>Таблица для хранения информации о товарах</description>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>В наличии</description>
        <inlineHelpText>Признак наличия товара</inlineHelpText>
        <label>В наличии</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_added__c</fullName>
        <description>Дата добавления</description>
        <inlineHelpText>Дата добавления товара</inlineHelpText>
        <label>Дата добавления</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Идентификатор товара</description>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Идентификатор товара</inlineHelpText>
        <label>Идентификатор</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Цена</description>
        <inlineHelpText>Цена товара</inlineHelpText>
        <label>Цена</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Количество</description>
        <inlineHelpText>Количество товара</inlineHelpText>
        <label>Количество</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_date__c</fullName>
        <description>Дата выпуска</description>
        <inlineHelpText>Дата выпуска товара</inlineHelpText>
        <label>Дата выпуска</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Тип</description>
        <inlineHelpText>Тип товара</inlineHelpText>
        <label>Тип</label>
        <picklist>
            <picklistValues>
                <fullName>ПС</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ДП</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>СА</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>КП</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>КТ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Товар</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Products_Full</fullName>
        <columns>ID__c</columns>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Type__c</columns>
        <columns>Date_added__c</columns>
        <columns>Release_date__c</columns>
        <columns>Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>Products_Full</label>
    </listViews>
    <nameField>
        <label>Имя</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Товары (Standard)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QuantityCheckRule</fullName>
        <active>true</active>
        <description>Количество товара должно быть больше либо равно 0</description>
        <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Количество товара меньше нуля.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReleaseDateCheckRule</fullName>
        <active>true</active>
        <description>Дата выпуска товара не должна быть позже текущей даты</description>
        <errorConditionFormula>Release_date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Release_date__c</errorDisplayField>
        <errorMessage>Дата выпуска товара не должна быть позже текущей даты.</errorMessage>
    </validationRules>
</CustomObject>